--- a/cloth-larder/src/index.css
+++ b/cloth-larder/src/index.css
@@ -3,3 +3,18 @@ html {
   padding: 0;
   box-sizing: border-box;
 }
+
+body {
+  font-family: Ubuntu, sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+a {
+  text-decoration: none;
+  color: black;
+}
