--- a/cloth-larder/src/index.css
+++ b/cloth-larder/src/index.css
@@ -5,6 +5,7 @@ html {
 }
 
 body {
+  padding: 20px 40px;
   font-family: Ubuntu, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
